# Machine_Learning

./: .gitignore  LICENSE  README.md  hindi-vocab.txt  requirements.txt  tf_examples.tfrecord
Deploying_Models/: Deploying_paradigms.txt  SAGunicorn.py  flask_adv_deploy.py  flask_deploy.py
Explainable_AI/: readme.md
Face_detection/: face_recog.py  face_vid_recog.py
Improving_Neural_Networks/: keras_tuner.ipynb  keras_tuner.py  keras_tuner2.ipynb  keras_tuner2.py  tf_explain.py
Learning Keras/: practice.py
Learning_Applied_Statistics/: Categorical_Feature_Selection_Cramer's_V_Test.ipynb  Correlations.ipynb  Feature_Selection_Categorical_Chi_Squared.ipynb  Imputing_Missing_values.ipynb  Poly_Regression_Non_linear_Relationship.ipynb  categorical_feature_selection_cramer's_v_test.py  correlations.py  feature_selection_categorical_chi_squared.py
Learning_AutoML/: AutoGluonStarter.ipynb  AutoML_AutoGluon.ipynb  AutoML_AutoSklearn.ipynb  AutoML_AutoViML.ipynb  AutoML_Pycaret.ipynb  AutoML_TPOT,ipynb.ipynb  AutoML_h2o.ipynb  AutoViz.ipynb  autogluonstarter.py  automl_autogluon.py  automl_autosklearn.py  automl_autoviml.py  automl_h2o.py  automl_tpot,ipynb.py  autoviz.py
Learning_Caffe/: Training_a_CNN_in_Caffe.ipynb
Learning_GCP/: courses.txt
Learning_Neural_Structured_Learning/: Graph_regularization_for_document_classification_using_natural_graphs.ipynb  Graph_regularization_for_sentiment_classification_using_synthesized_graphs.ipynb  Nerual_Structured_Learning_intro.ipynb
Learning_Object_Detection/: DarkNet_YOLO.ipynb  RetinaNet_with_Detectron2.ipynb
Learning_Pytorch/: Introduction_to_TorchScript.ipynb
Learning_Pytorch/TorchScript/: CMakeLists.txt  TorchScript_to_C++.ipynb  example-app.cpp
Learning_Pytorch/Torch_cpp/example_libtorch/: CMakeLists.txt  sample.cpp
Learning_Pytorch_Lightning/: Lightning_mnist_tpu.py  advanced_guide.py  (+5 more)
(+170 files in other folders)
